fix z-index

--- a/src/components/about-me/AboutMe.scss
+++ b/src/components/about-me/AboutMe.scss
@@ -7,6 +7,7 @@
     position: relative;
     right: 3%;
     top: 30%;
+    z-index: 1;
 
     .title {
       color: white;
