--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,6 +1,6 @@
 #container {
   position: fixed;
-  z-index: 1;
+  z-index: 999;
   width: 100%;
   height: 5vh;
   background: #333333;
